--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   overflow-y: scroll;
 }
 .content-wrapper {
-  margin-top: 80px;
+  margin-top: 8px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -11,7 +11,6 @@ body {
 .content {
   display: flex;
   flex: 1 1 auto;
-  max-width: 1080px;
 }
 .repl-container {
   display: flex;
@@ -22,48 +21,73 @@ body {
 .editor-area {
   flex: 1 1 auto;
   width: 100%;
-  min-height: 300px;
+  height: calc(100vh - 50px);
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+}
+@media (min-width: 1250px) {
+  .editor-area {
+    flex-direction: row;
+  }
+  .output {
+    max-width: 650px !important;
+    height: calc(100vh - 81px) !important;
+  }
+  .code {
+    height: 100%;
+  }
 }
 #editor {
   font-size: 0.8rem;
 }
 .code {
   flex: 1 1 auto;
-  min-width: 350px;
-  min-height: 150px;
-  max-height: 287px;
-  max-width: 100%;
   overflow-y: auto;
+  overflow-x: auto;
 }
 .output {
   margin-top: 0;
   flex: 1 1 auto;
   background-color: #d3d3d3;
   padding: 1rem;
-  min-height: 118px;
-  max-height: 300px;
-  width: 350px;
+  height: calc(100vh - 880px);
+  max-width: calc(100vw - 47px);
   overflow-y: auto;
+  overflow-x: auto;
 }
-.errs {
-  flex: 1 1 auto;
-  height: 100%;
-}
-.errs .errMsg {
-  overflow-y: auto;
+.errMsg {
   color: #b00000;
 }
-button {
-  padding: 0.5rem;
-  margin: 1.5rem;
-  width: 5rem;
-  border-radius: 5px;
+.fake-a {
+  color: #7f7f7f;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  display: inline-block;
   user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
+}
+.fake-a:hover {
+  text-decoration: underline;
+}
+.fake-a.warn {
+  color: #ff4545;
+}
+.connection-issue-banner {
+  position: fixed;
+  left: 8px;
+  right: 8px;
+  bottom: 8px;
+  background: #ff2020;
+  color: #e5e5e5;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  opacity: 0.85;
+  z-index: 9000;
+}
+.connection-issue-banner p {
+  padding: 0px 75px;
 }
